force-app/main/default/objects/Recruiting_Activity__c/Recruiting_Activity__c.object-meta.xml
<CustomObject>
    <description>Stores recruiting related activities (e.g. entry sources).</description>
    <label>Recruiting Activity</label>
    <nameField>
        <displayFormat>RA{00000000}</displayFormat>
        <label>Recruiting Activity ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recruiting Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>