force-app/main/default/objects/Recruiting_Activity__c/fields/Entry_Source__c.field-meta.xml
<CustomField>
    <fullName>Entry_Source__c</fullName>
    <description>Volunteer interest form or application completed online.</description>
    <inlineHelpText>Volunteer interest form or application completed online.</inlineHelpText>
    <label>Online Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>General Intake Form</fullName>
                <label>Volunteer Interest Form</label>
            </value>
            <value>
                <fullName>Driver Safety Application</fullName>
            </value>
            <value>
                <fullName>Experience Corps Intake Form</fullName>
            </value>
            <value>
                <fullName>States Leadership Application</fullName>
                <label>States Volunteer Application</label>
            </value>
            <value>
                <fullName>Tax-Aide Application</fullName>
            </value>
            <value>
                <fullName>Volunteer Wizard</fullName>
            </value>
            <value>
                <fullName>Volunteer Opportunity Board</fullName>
            </value>
            <value>
                <fullName>Life Reimagined Application</fullName>
            </value>
            <value>
                <fullName>Program Activity</fullName>
            </value>
            <value>
                <fullName>Cvent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>