force-app/main/default/objects/Recruiting_Activity__c/fields/Entry_Source_Date__c.field-meta.xml
<CustomField>
    <fullName>Entry_Source_Date__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>Date when recruiting activity occurred.</description>
    <inlineHelpText>Date when recruiting activity occurred.</inlineHelpText>
    <label>Recruiting Activity Date</label>
    <type>Date</type>
</CustomField>