force-app/main/default/objects/Recruiting_Activity__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <description>The position applied for via the Volunteer Opportunity Board.</description>
    <inlineHelpText>The position applied for via the Volunteer Opportunity Board.</inlineHelpText>
    <label>Position</label>
    <length>80</length>
    <type>Text</type>
</CustomField>