force-app/main/default/objects/Recruiting_Activity__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <description>Related enterprise level program.</description>
    <formula>Program_Volunteer_ID__r.Program__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Related enterprise level program.</inlineHelpText>
    <label>Program</label>
    <type>Text</type>
</CustomField>