force-app/main/default/objects/Recruiting_Activity__c/fields/Program_Route_To__c.field-meta.xml
<CustomField>
    <fullName>Program_Route_To__c</fullName>
    <formula>Program_Volunteer_ID__r.Program_Route_To__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program Route To</label>
    <type>Text</type>
</CustomField>