force-app/main/default/objects/Recruiting_Activity__c/fields/Program_Volunteer_ID__c.field-meta.xml
<CustomField>
    <fullName>Program_Volunteer_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup relation to program volunteer object.</description>
    <inlineHelpText>Related program volunteer record ID.</inlineHelpText>
    <label>Program Volunteer ID</label>
    <referenceTo>Program_Volunteer__c</referenceTo>
    <relationshipLabel>Recruiting Activities</relationshipLabel>
    <relationshipName>Recruiting_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>