force-app/main/default/objects/Recruiting_Activity__c/fields/Program_Volunteer_Status__c.field-meta.xml
<CustomField>
    <fullName>Program_Volunteer_Status__c</fullName>
    <formula>TEXT(Program_Volunteer_ID__r.Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program Volunteer Status</label>
    <type>Text</type>
</CustomField>