force-app/main/default/objects/Recruiting_Activity__c/fields/Volunteer__c.field-meta.xml
<CustomField>
    <fullName>Volunteer__c</fullName>
    <description>Volunteer related to recruiting activity record.</description>
    <formula>Program_Volunteer_ID__r.Volunteer__r.Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Volunteer related to recruiting activity record.</inlineHelpText>
    <label>Volunteer</label>
    <type>Text</type>
</CustomField>