force-app/main/default/objects/Recruiting_Activity__c/fields/Volunteer_Event__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Name of event where prospect showed interest in volunteering.</inlineHelpText>
    <label>Volunteer Event</label>
    <referenceTo>Volunteer_Event__c</referenceTo>
    <relationshipLabel>Recruiting Activities</relationshipLabel>
    <relationshipName>Recruiting_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>